[package]
name = "cita-types"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "A library wrapping cita types"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/cita-cloud/cita-types"

[dependencies]
ethereum-types = "0.12"
plain_hasher = "0.2"
