[package]
name = "cita-types"
version = "0.1.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "A library wrapping cita types"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cita-cloud/cita-types"

[dependencies]
ethereum-types = "0.13"
plain_hasher = "0.2"
